$Id$

2007-04-12 Roy Hills <Roy.Hills@nta-monitor.com>

	* Released arp-scan version 1.6.
	  tarball arp-scan-1.6.tar.gz, size 319,566 bytes
	  md5sum eb24303c6eb4d77c3abf23511efce642

2007-04-10 Roy Hills <Roy.Hills@nta-monitor.com>

	* mt19937ar.c: New file - Mersenne Twister random number generator.

	* arp-scan.c: Changed random number implementation to use the mersenne
	  twister functions from mt19937ar.c rather than random() from the C
	  library.  This improves portability, as random() is not part of
	  standard C.

	* Updated ieee-oui.txt and ieee-iab.txt from the IEEE website
	  using get-oui and get-iab Perl scripts.

2007-04-08 Roy Hills <Roy.Hills@nta-monitor.com>

	* utils.c: Removed ununsed function printable().

	* arp-scan.c: Added /* NOTREACHED */ comments in appropriate places.
	  Removed uneeded max_iter global variable.
	  Added call to pcap_lib_version() in arp_scan_version().

	* configure.ac: Changed check for pcap_datalink_val_to_name() to
	  check for pcap_lib_version() instead.

2007-04-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Added checks for strlcat and strlcpy, with
	  replacement functions using the OpenBSD implementations if they are
	  not present.

	* strlcat.c, strlcpy.c: New source files from the OpenBSD source at
	  http://www.openbsd.org/cgi-bin/cvsweb/src/lib/libc/string

	* *.c: replaced most calls to strcat and strncat with strlcat, and
	  calls to strcpy and strncpy with strlcpy.  Two calls to strncpy
	  remain because the source strings are not null terminated.

2007-04-05 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Check the return status of pcap_dispatch() against -1
	  rather than < 0 to check for error because the use of pcap_breakloop
	  results in a return status of -2, and this is not an error.  Even
	  though we don't use pcap_breakloop, we should still behave correctly
	  if it used in the future.

	* arp-scan.c: Check return status of inet_pton() seperately against